03-network-policies/stars-policy-demo/01-application.yaml
apiVersion: v1
kind: Service
metadata:
  name: management-ui
spec:
  type: ClusterIP
  ports:
    - port: 9001
      targetPort: 9001
  selector:
    role: management-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: management-ui
  labels:
    role: management-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      role: management-ui
  template:
    metadata:
      labels:
        role: management-ui
        app: stars
    spec:
      containers:
        - name: management-ui
          image: bogd/stars-policy-demo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 9001
          command:
          - /star/collect
          - --resources-file=/config/probes.json
          volumeMounts:
          - name: probes-json
            mountPath: /config
      volumes:
      - name: probes-json
        configMap: 
          name: probes-json
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    role: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    role: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      role: backend
  template:
    metadata:
      labels:
        role: backend
        app: stars
    spec:
      containers:
        - name: backend
          image: bogd/stars-policy-demo:latest
          imagePullPolicy: Always
          command:
            - /star/probe
            - --http-port=6379
            - --urls=http://frontend:80/status,http://backend:6379/status,http://client:9000/status
          ports:
            - containerPort: 6379 
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    role: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    role: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      role: frontend
  template:
    metadata:
      labels:
        role: frontend
        app: stars
    spec:
      containers:
        - name: frontend
          image: bogd/stars-policy-demo:latest
          imagePullPolicy: Always
          command:
            - /star/probe
            - --http-port=80
            - --urls=http://frontend:80/status,http://backend:6379/status,http://client:9000/status
          ports:
            - containerPort: 80 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  labels:
    role: client
spec:
  replicas: 1
  selector:
    matchLabels:
      role: client
  template:
    metadata:
      labels:
        role: client
        app: stars
    spec:
      containers:
        - name: client
          image: bogd/stars-policy-demo:latest
          imagePullPolicy: Always
          command:
            - /star/probe
            - --http-port=9000 # default
            - --urls=http://frontend:80/status,http://backend:6379/status
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    role: client 
---
