03-network-policies/stars-policy-demo/03-default-deny.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
spec:
  podSelector:
    matchLabels: 
      app: stars  # Use matchLabels: {} for a global default deny
  policyTypes:
  - Ingress
